sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:5: error: reassignment to val
  liste=actualDist(nbBases,nbPos)
       ^NaiveBaseball:15: error: not found: value pos
     pos +=1 
     ^NaiveBaseball:26: error: not found: value liste
      liste(cpt)=distance(i,j)
      ^