sort.baseball.NaiveBaseball.scala.code
override def run() {
  val nbBases = getNombreBases()
  val nbPos = getNombrePositions()
  val liste = new Array[Int](6)
  liste=actualDist(nbBases,nbPos)
  
}


def distance(base:Int, position:Int):Int={
  var dist = 0
  var col = getCouleurJoueur(base,position)
  while (col != base){
    dist += 1
   	pos +=1 
  }
  return dist
}

def actualDist(nbBases:Int,nbPos:Int){
  var i=0
 	var j=0
  var cpt=0
  for (i <- 0 to nbBases-1 ){
    for (j <- 0 to nbPos-1){
      liste(cpt)=distance(i,j)
    }
  }
}